--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 /*--settings HTML--*/
 body {
   font-family: "Raleway";
-  background:/*#f1f1f1*/ white;
+  background: white;
   margin: auto;
   padding: 0;
   display: flex;
@@ -25,7 +25,7 @@ body {
 }
 
 /*--HEADER--*/
-header {
+#header {
   color: white;
   margin: 0;
   padding-top: 50px;
