--- a/style.css
+++ b/style.css
@@ -41,11 +41,11 @@ body {
   object-fit: cover;
   border-radius: 50%;
   box-shadow: 0 0 10px white;
-  margin: 0px auto 10px auto;
+  margin: 25px auto 10px auto;
 }
 
 #photo:hover {
-  cursor: zomm-in;
+  cursor: zoom-in;
 }
 
 /*--Texte--*/
@@ -82,29 +82,28 @@ a {
 }
 
 /*--INFOS--*/
-.bloc-info {
-  color: white;
+#address {
+  background-color: #2c1d27;
   width: 100%;
-  display: flex; /*flex-direction:column;*/
-  background-color: #2c1d27;
-}
-
-.element {
-  width: 33.33%;
   height: 50px;
-  padding-top: 25px;
-  text-align: center;
-  background-color: #2c1d27;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.element2 {
-  background-color: #2c1d27;
-  text-align: center;
+#info1,
+#info2,
+#info3 {
+  text-decoration: none;
+  color: white;
+  margin-left: 1.5em;
+  margin-right: 1.5em;
 }
 
-.element3 {
-  padding-right: 25px;
-  text-align: right;
+#info1:hover,
+#info2:hover,
+#info3:hover {
+  text-decoration: underline;
 }
 
 /*--CONTENU--*/
