--- a/style.css
+++ b/style.css
@@ -16,38 +16,6 @@ body {
   width: 1160px;
 }
 
-/*--settings container--*/
-.container {
-  margin: 0px auto;
-  background-color: #782221;
-  display: flex;
-  flex-direction: column;
-}
-
-/*--HEADER--*/
-#header {
-  color: white;
-  margin: 0;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  text-align: center;
-}
-
-#photo {
-  display: flex;
-  margin-top: 15px;
-  width: 150px;
-  height: 150px;
-  object-fit: cover;
-  border-radius: 50%;
-  box-shadow: 0 0 10px white;
-  margin: 25px auto 10px auto;
-}
-
-#photo:hover {
-  cursor: zoom-in;
-}
-
 /*--Texte--*/
 h1 {
   font-family: "Lato", sans-serif;
@@ -79,6 +47,38 @@ h3 {
 a {
   color: white;
   text-decoretion: none;
+}
+
+/*--settings container--*/
+.container {
+  margin: 0px auto;
+  background-color: #782221;
+  display: flex;
+  flex-direction: column;
+}
+
+/*--HEADER--*/
+#header {
+  color: white;
+  margin: 0;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  text-align: center;
+}
+
+#photo {
+  display: flex;
+  margin-top: 15px;
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 50%;
+  box-shadow: 0 0 10px white;
+  margin: 25px auto 10px auto;
+}
+
+#photo:hover {
+  cursor: zoom-in;
 }
 
 /*--INFOS--*/
@@ -121,6 +121,7 @@ a {
   padding-left: 15px;
   display: flex;
   background-color: #782221;
+  flex-direction: column;
 }
 
 .element-propos {
@@ -134,6 +135,12 @@ a {
   background-color: #dbc2a4;
 }
 
+#indent {
+  text-align: justify;
+  text-indent: 2em;
+  margin: 1em;
+}
+
 /*--Experiences--*/
 .bloc-exp {
   width: 75%;
@@ -142,7 +149,10 @@ a {
   display: flex;
   flex-direction: column;
   background-color: white;
+  border-right-style: solid;
+  border-color: #2c1d27;
 }
+
 /*--Autre--*/
 .bottom__logo {
   height: 50px;
@@ -155,5 +165,5 @@ a {
 .bottom {
   text-align: center;
   color: white;
-  margin-bottom: 200px;
+  margin-bottom: 5px;
 }
