--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ h2 {
   font-weight: 400;
   margin-top: 0;
   margin-bottom: 10px;
-  font-size: 1.5rem;
+  font-size: 1.5em;
   border-left: 10px;
   border-color: #dbc2a4;
 }
@@ -74,7 +74,7 @@ a {
   object-fit: cover;
   border-radius: 50%;
   box-shadow: 0 0 10px white;
-  margin: 25px auto 10px auto;
+  margin: 25px auto 25px auto;
 }
 
 #photo:hover {
@@ -166,4 +166,9 @@ a {
   text-align: center;
   color: white;
   margin-bottom: 5px;
+}
+
+#maj {
+  color: white;
+  justify-center: center;
 }
