--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h1 {
 }
 
 h2 {
-  font-family: "Raleway", sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   margin-top: 0;
   margin-bottom: 10px;
@@ -40,7 +40,7 @@ h2:hover {
 }
 
 h3 {
-  font-family: "Raleway", sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
 }
 
@@ -127,6 +127,8 @@ a {
 .element-propos {
   color: black;
   width: 100%;
+  height: 50px;
+  display: flex;
   margin-bottom: 15px;
   background-color: #dbc2a4;
 }
